--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,8 +7,9 @@ WORKDIR /app
 # 复制package.json和package-lock.json
 COPY package*.json ./
 
-# 安装依赖
-RUN npm ci --registry=http://registry.npmmirror.com
+# 安装依赖（包括开发依赖）
+RUN npm ci --include=dev --registry=http://registry.npmmirror.com
+
 
 # 复制源代码
 COPY . .
