--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,20 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.0",
-    "vue-router": "^4.2.0",
     "axios": "^1.5.0",
-    "element-plus": "^2.4.0",
+    "dayjs": "^1.11.0",
     "echarts": "^5.4.0",
+    "element-plus": "^2.4.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "vue": "^3.3.0",
     "vue-echarts": "^6.6.0",
-    "dayjs": "^1.11.0"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
-    "vite": "^4.4.0",
     "unplugin-auto-import": "^0.16.0",
-    "unplugin-vue-components": "^0.25.0"
+    "unplugin-vue-components": "^0.25.0",
+    "vite": "^4.4.0"
   }
-} 
+}
